--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "yugipedia-gql",
-	"version": "0.1.1",
+	"version": "0.2.0",
 	"description": "A GraphQL wrapper around the MediaWiki API for Yugipedia. Designed to make the queries and results more intuitive and simple.",
 	"main": "index.js",
 	"type": "module",
@@ -35,7 +35,9 @@
 		"graphql-parse-resolve-info": "^4.13.0",
 		"lodash.camelcase": "^4.3.0",
 		"lodash.chunk": "^4.2.0",
-		"ora": "^8.0.1",
+		"ora": "^8.0.1"
+	},
+	"devDependencies": {
 		"puppeteer": "^21.11.0",
 		"puppeteer-cluster": "^0.23.0"
 	}
