--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "yugipedia-gql",
-	"version": "0.2.0",
+	"version": "0.3.0",
 	"description": "A GraphQL wrapper around the MediaWiki API for Yugipedia. Designed to make the queries and results more intuitive and simple.",
 	"main": "index.js",
 	"type": "module",
@@ -9,7 +9,8 @@
 		"url": "https://github.com/jacoblockett/yugipedia-gql"
 	},
 	"scripts": {
-		"test": "clear && node test.js"
+		"test": "clear && node test.js",
+		"updateSchema": "clear && node internal/updateSchema.js"
 	},
 	"keywords": [
 		"yugipedia",
@@ -35,9 +36,7 @@
 		"graphql-parse-resolve-info": "^4.13.0",
 		"lodash.camelcase": "^4.3.0",
 		"lodash.chunk": "^4.2.0",
-		"ora": "^8.0.1"
-	},
-	"devDependencies": {
+		"ora": "^8.0.1",
 		"puppeteer": "^21.11.0",
 		"puppeteer-cluster": "^0.23.0"
 	}
