--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"graphql": "^16.8.1",
 		"graphql-fields": "^2.0.3",
 		"graphql-parse-resolve-info": "^4.13.0",
+		"joi": "^17.12.1",
 		"lodash.camelcase": "^4.3.0",
 		"lodash.chunk": "^4.2.0",
 		"ora": "^8.0.1",
