--- a/package.json
+++ b/package.json
@@ -26,19 +26,20 @@
 	"author": "Jacob Lockett",
 	"license": "ISC",
 	"dependencies": {
-		"axios": "^1.6.7",
+		"axios": "^1.7.3",
 		"bottleneck": "^2.19.5",
 		"chalk": "^5.3.0",
-		"cheerio": "^1.0.0-rc.12",
+		"cheerio": "^1.0.0",
 		"elmara": "^0.1.0",
-		"graphql": "^16.8.1",
+		"graphql": "^16.9.0",
 		"graphql-fields": "^2.0.3",
 		"graphql-parse-resolve-info": "^4.13.0",
-		"joi": "^17.12.1",
+		"joi": "^17.13.3",
 		"lodash.camelcase": "^4.3.0",
 		"lodash.chunk": "^4.2.0",
 		"ora": "^8.0.1",
-		"puppeteer": "^21.11.0",
-		"puppeteer-cluster": "^0.23.0"
+		"perma.db": "^0.0.3",
+		"puppeteer": "^23.0.2",
+		"puppeteer-cluster": "^0.24.0"
 	}
 }
