--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
 	"license": "ISC",
 	"dependencies": {
 		"axios": "^1.7.3",
+		"better-sqlite3": "^11.1.2",
 		"bottleneck": "^2.19.5",
 		"chalk": "^5.3.0",
 		"cheerio": "^1.0.0",
+		"date-fns": "^3.6.0",
 		"elmara": "^0.1.0",
 		"graphql": "^16.9.0",
 		"graphql-fields": "^2.0.3",
@@ -38,7 +40,6 @@
 		"lodash.camelcase": "^4.3.0",
 		"lodash.chunk": "^4.2.0",
 		"ora": "^8.0.1",
-		"perma.db": "^0.0.3",
 		"puppeteer": "^23.0.2",
 		"puppeteer-cluster": "^0.24.0"
 	}
